hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__diverse_dfg_children@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call { i32, {}, {} } @_hl.scoped_func.8()
  ret { i32, {}, {} } %0
}

define { i32, {}, {} } @_hl.scoped_func.8() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret { i32, {}, {} } { i32 0, {} undef, {} poison }
}
