hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_call@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main_void.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @_hl.main_void.1()
  ret void
}

define { i32, {}, {} } @_hl.main_unary.5({ i32, {}, {} } %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call { i32, {}, {} } @_hl.main_unary.5({ i32, {}, {} } %0)
  ret { i32, {}, {} } %1
}

define { { i32, {}, {} }, { i32, {}, {} } } @_hl.main_binary.9({ i32, {}, {} } %0, { i32, {}, {} } %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = call { { i32, {}, {} }, { i32, {}, {} } } @_hl.main_binary.9({ i32, {}, {} } %0, { i32, {}, {} } %1)
  %3 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %2, 0
  %4 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %2, 1
  %mrv = insertvalue { { i32, {}, {} }, { i32, {}, {} } } undef, { i32, {}, {} } %3, 0
  %mrv7 = insertvalue { { i32, {}, {} }, { i32, {}, {} } } %mrv, { i32, {}, {} } %4, 1
  ret { { i32, {}, {} }, { i32, {}, {} } } %mrv7
}
