hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_call_indirect@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.main_void.1() {
alloca_block:
  %"4_0" = alloca void ()*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store void ()* @_hl.main_void.1, void ()** %"4_0", align 8
  %"4_01" = load void ()*, void ()** %"4_0", align 8
  call void %"4_01"()
  ret void
}

define { i32, {}, {} } @_hl.main_unary.6({ i32, {}, {} } %0) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"7_0" = alloca { i32, {}, {} }, align 8
  %"9_0" = alloca { i32, {}, {} } ({ i32, {}, {} })*, align 8
  %"10_0" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"7_0", align 4
  store { i32, {}, {} } ({ i32, {}, {} })* @_hl.main_unary.6, { i32, {}, {} } ({ i32, {}, {} })** %"9_0", align 8
  %"9_01" = load { i32, {}, {} } ({ i32, {}, {} })*, { i32, {}, {} } ({ i32, {}, {} })** %"9_0", align 8
  %"7_02" = load { i32, {}, {} }, { i32, {}, {} }* %"7_0", align 4
  %1 = call { i32, {}, {} } %"9_01"({ i32, {}, {} } %"7_02")
  store { i32, {}, {} } %1, { i32, {}, {} }* %"10_0", align 4
  %"10_03" = load { i32, {}, {} }, { i32, {}, {} }* %"10_0", align 4
  store { i32, {}, {} } %"10_03", { i32, {}, {} }* %"0", align 4
  %"04" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  ret { i32, {}, {} } %"04"
}

define { { i32, {}, {} }, { i32, {}, {} } } @_hl.main_binary.11({ i32, {}, {} } %0, { i32, {}, {} } %1) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"1" = alloca { i32, {}, {} }, align 8
  %"12_0" = alloca { i32, {}, {} }, align 8
  %"12_1" = alloca { i32, {}, {} }, align 8
  %"14_0" = alloca { { i32, {}, {} }, { i32, {}, {} } } ({ i32, {}, {} }, { i32, {}, {} })*, align 8
  %"15_0" = alloca { i32, {}, {} }, align 8
  %"15_1" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"12_0", align 4
  store { i32, {}, {} } %1, { i32, {}, {} }* %"12_1", align 4
  store { { i32, {}, {} }, { i32, {}, {} } } ({ i32, {}, {} }, { i32, {}, {} })* @_hl.main_binary.11, { { i32, {}, {} }, { i32, {}, {} } } ({ i32, {}, {} }, { i32, {}, {} })** %"14_0", align 8
  %"14_01" = load { { i32, {}, {} }, { i32, {}, {} } } ({ i32, {}, {} }, { i32, {}, {} })*, { { i32, {}, {} }, { i32, {}, {} } } ({ i32, {}, {} }, { i32, {}, {} })** %"14_0", align 8
  %"12_02" = load { i32, {}, {} }, { i32, {}, {} }* %"12_0", align 4
  %"12_13" = load { i32, {}, {} }, { i32, {}, {} }* %"12_1", align 4
  %2 = call { { i32, {}, {} }, { i32, {}, {} } } %"14_01"({ i32, {}, {} } %"12_02", { i32, {}, {} } %"12_13")
  %3 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %2, 0
  %4 = extractvalue { { i32, {}, {} }, { i32, {}, {} } } %2, 1
  store { i32, {}, {} } %3, { i32, {}, {} }* %"15_0", align 4
  store { i32, {}, {} } %4, { i32, {}, {} }* %"15_1", align 4
  %"15_04" = load { i32, {}, {} }, { i32, {}, {} }* %"15_0", align 4
  %"15_15" = load { i32, {}, {} }, { i32, {}, {} }* %"15_1", align 4
  store { i32, {}, {} } %"15_04", { i32, {}, {} }* %"0", align 4
  store { i32, {}, {} } %"15_15", { i32, {}, {} }* %"1", align 4
  %"06" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  %"17" = load { i32, {}, {} }, { i32, {}, {} }* %"1", align 4
  %mrv = insertvalue { { i32, {}, {} }, { i32, {}, {} } } undef, { i32, {}, {} } %"06", 0
  %mrv8 = insertvalue { { i32, {}, {} }, { i32, {}, {} } } %mrv, { i32, {}, {} } %"17", 1
  ret { { i32, {}, {} }, { i32, {}, {} } } %mrv8
}
