hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_conditional@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } @_hl.main.1({ i32, { {} }, { { {} } }, { { i32, {}, {} } } } %0, { {} } %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %0, 0
  switch i32 %2, label %3 [
    i32 1, label %6
    i32 2, label %9
  ]

3:                                                ; preds = %entry_block
  %4 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %0, 1
  %5 = extractvalue { {} } %4, 0
  br label %cond_4_case_0

6:                                                ; preds = %entry_block
  %7 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %0, 2
  %8 = extractvalue { { {} } } %7, 0
  br label %cond_4_case_1

9:                                                ; preds = %entry_block
  %10 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %0, 3
  %11 = extractvalue { { i32, {}, {} } } %10, 0
  br label %cond_4_case_2

cond_4_case_0:                                    ; preds = %3
  %12 = insertvalue { {} } undef, {} %5, 0
  %13 = insertvalue { i32, { { i32, {}, {} } }, { { {} } }, { {} } } { i32 2, { { i32, {}, {} } } poison, { { {} } } poison, { {} } poison }, { {} } %12, 3
  br label %cond_exit_4

cond_4_case_1:                                    ; preds = %6
  %14 = insertvalue { { {} } } undef, { {} } %8, 0
  %15 = insertvalue { i32, { { i32, {}, {} } }, { { {} } }, { {} } } { i32 1, { { i32, {}, {} } } poison, { { {} } } poison, { {} } poison }, { { {} } } %14, 2
  br label %cond_exit_4

cond_4_case_2:                                    ; preds = %9
  %16 = insertvalue { { i32, {}, {} } } undef, { i32, {}, {} } %11, 0
  %17 = insertvalue { i32, { { i32, {}, {} } }, { { {} } }, { {} } } { i32 0, { { i32, {}, {} } } poison, { { {} } } poison, { {} } poison }, { { i32, {}, {} } } %16, 1
  br label %cond_exit_4

cond_exit_4:                                      ; preds = %cond_4_case_2, %cond_4_case_1, %cond_4_case_0
  %"03.0" = phi { i32, { { i32, {}, {} } }, { { {} } }, { {} } } [ %13, %cond_4_case_0 ], [ %17, %cond_4_case_2 ], [ %15, %cond_4_case_1 ]
  %mrv = insertvalue { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } undef, { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %"03.0", 0
  %mrv32 = insertvalue { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } %mrv, { {} } %1, 1
  ret { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } %mrv32
}
