hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__emit_hugr_conditional@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } @_hl.main.1({ i32, { {} }, { { {} } }, { { i32, {}, {} } } } %0, { {} } %1) {
alloca_block:
  %"0" = alloca { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, align 8
  %"1" = alloca { {} }, align 8
  %"2_0" = alloca { i32, { {} }, { { {} } }, { { i32, {}, {} } } }, align 8
  %"2_1" = alloca { {} }, align 8
  %"4_0" = alloca { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, align 8
  %"4_1" = alloca { {} }, align 8
  %"03" = alloca { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, align 8
  %"14" = alloca { {} }, align 8
  %"07" = alloca {}, align 8
  %"18" = alloca { {} }, align 8
  %"6_0" = alloca {}, align 8
  %"6_1" = alloca { {} }, align 8
  %"8_0" = alloca { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, align 8
  %"014" = alloca { {} }, align 8
  %"115" = alloca { {} }, align 8
  %"10_0" = alloca { {} }, align 8
  %"10_1" = alloca { {} }, align 8
  %"12_0" = alloca { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, align 8
  %"021" = alloca { i32, {}, {} }, align 8
  %"122" = alloca { {} }, align 8
  %"14_0" = alloca { i32, {}, {} }, align 8
  %"14_1" = alloca { {} }, align 8
  %"16_0" = alloca { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %0, { i32, { {} }, { { {} } }, { { i32, {}, {} } } }* %"2_0", align 4
  store { {} } %1, { {} }* %"2_1", align 1
  %"2_01" = load { i32, { {} }, { { {} } }, { { i32, {}, {} } } }, { i32, { {} }, { { {} } }, { { i32, {}, {} } } }* %"2_0", align 4
  %"2_12" = load { {} }, { {} }* %"2_1", align 1
  %2 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %"2_01", 0
  switch i32 %2, label %3 [
    i32 1, label %6
    i32 2, label %9
  ]

3:                                                ; preds = %entry_block
  %4 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %"2_01", 1
  %5 = extractvalue { {} } %4, 0
  store {} %5, {}* %"07", align 1
  store { {} } %"2_12", { {} }* %"18", align 1
  br label %cond_4_case_0

6:                                                ; preds = %entry_block
  %7 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %"2_01", 2
  %8 = extractvalue { { {} } } %7, 0
  store { {} } %8, { {} }* %"014", align 1
  store { {} } %"2_12", { {} }* %"115", align 1
  br label %cond_4_case_1

9:                                                ; preds = %entry_block
  %10 = extractvalue { i32, { {} }, { { {} } }, { { i32, {}, {} } } } %"2_01", 3
  %11 = extractvalue { { i32, {}, {} } } %10, 0
  store { i32, {}, {} } %11, { i32, {}, {} }* %"021", align 4
  store { {} } %"2_12", { {} }* %"122", align 1
  br label %cond_4_case_2

cond_4_case_0:                                    ; preds = %3
  %"09" = load {}, {}* %"07", align 1
  %"110" = load { {} }, { {} }* %"18", align 1
  store {} %"09", {}* %"6_0", align 1
  store { {} } %"110", { {} }* %"6_1", align 1
  %"6_011" = load {}, {}* %"6_0", align 1
  %12 = insertvalue { {} } undef, {} %"6_011", 0
  %13 = insertvalue { i32, { { i32, {}, {} } }, { { {} } }, { {} } } { i32 2, { { i32, {}, {} } } poison, { { {} } } poison, { {} } poison }, { {} } %12, 3
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %13, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"8_0", align 4
  %"8_012" = load { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"8_0", align 4
  %"6_113" = load { {} }, { {} }* %"6_1", align 1
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %"8_012", { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"03", align 4
  store { {} } %"6_113", { {} }* %"14", align 1
  br label %cond_exit_4

cond_4_case_1:                                    ; preds = %6
  %"016" = load { {} }, { {} }* %"014", align 1
  %"117" = load { {} }, { {} }* %"115", align 1
  store { {} } %"016", { {} }* %"10_0", align 1
  store { {} } %"117", { {} }* %"10_1", align 1
  %"10_018" = load { {} }, { {} }* %"10_0", align 1
  %14 = insertvalue { { {} } } undef, { {} } %"10_018", 0
  %15 = insertvalue { i32, { { i32, {}, {} } }, { { {} } }, { {} } } { i32 1, { { i32, {}, {} } } poison, { { {} } } poison, { {} } poison }, { { {} } } %14, 2
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %15, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"12_0", align 4
  %"12_019" = load { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"12_0", align 4
  %"10_120" = load { {} }, { {} }* %"10_1", align 1
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %"12_019", { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"03", align 4
  store { {} } %"10_120", { {} }* %"14", align 1
  br label %cond_exit_4

cond_4_case_2:                                    ; preds = %9
  %"023" = load { i32, {}, {} }, { i32, {}, {} }* %"021", align 4
  %"124" = load { {} }, { {} }* %"122", align 1
  store { i32, {}, {} } %"023", { i32, {}, {} }* %"14_0", align 4
  store { {} } %"124", { {} }* %"14_1", align 1
  %"14_025" = load { i32, {}, {} }, { i32, {}, {} }* %"14_0", align 4
  %16 = insertvalue { { i32, {}, {} } } undef, { i32, {}, {} } %"14_025", 0
  %17 = insertvalue { i32, { { i32, {}, {} } }, { { {} } }, { {} } } { i32 0, { { i32, {}, {} } } poison, { { {} } } poison, { {} } poison }, { { i32, {}, {} } } %16, 1
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %17, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"16_0", align 4
  %"16_026" = load { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"16_0", align 4
  %"14_127" = load { {} }, { {} }* %"14_1", align 1
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %"16_026", { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"03", align 4
  store { {} } %"14_127", { {} }* %"14", align 1
  br label %cond_exit_4

cond_exit_4:                                      ; preds = %cond_4_case_2, %cond_4_case_1, %cond_4_case_0
  %"05" = load { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"03", align 4
  %"16" = load { {} }, { {} }* %"14", align 1
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %"05", { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"4_0", align 4
  store { {} } %"16", { {} }* %"4_1", align 1
  %"4_028" = load { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"4_0", align 4
  %"4_129" = load { {} }, { {} }* %"4_1", align 1
  store { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %"4_028", { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"0", align 4
  store { {} } %"4_129", { {} }* %"1", align 1
  %"030" = load { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { i32, { { i32, {}, {} } }, { { {} } }, { {} } }* %"0", align 4
  %"131" = load { {} }, { {} }* %"1", align 1
  %mrv = insertvalue { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } undef, { i32, { { i32, {}, {} } }, { { {} } }, { {} } } %"030", 0
  %mrv32 = insertvalue { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } %mrv, { {} } %"131", 1
  ret { { i32, { { i32, {}, {} } }, { { {} } }, { {} } }, { {} } } %mrv32
}
