hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__load_function@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void ()* @_hl.main.2() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void ()* @_hl.target_func.1
}

declare void @_hl.target_func.1()
